--- a/Booking/Booking.csproj
+++ b/Booking/Booking.csproj
@@ -164,9 +164,15 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\CamereController.cs" />
+    <Compile Include="Controllers\PreferitiController.cs" />
     <Compile Include="Controllers\PrenotaController.cs" />
+    <Compile Include="Controllers\RecensioneController.cs" />
     <Compile Include="Controllers\StrutturaController.cs" />
     <Compile Include="Controllers\UtenteController.cs" />
+    <Compile Include="Migrations\202311081231442_firstMigration.cs" />
+    <Compile Include="Migrations\202311081231442_firstMigration.designer.cs">
+      <DependentUpon>202311081231442_firstMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\ModelDbContext\Camera.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -179,9 +185,11 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ModelDbContext\ModelDbContext.cs" />
+    <Compile Include="Models\ModelDbContext\Preferiti.cs" />
     <Compile Include="Models\ModelDbContext\Prenotazione.cs" />
     <Compile Include="Models\RicercaCamere.cs" />
     <Compile Include="Models\RoleManager.cs" />
+    <Compile Include="Models\StrutturaPunteggi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\ModelDbContext\Recensione.cs" />
     <Compile Include="Models\ModelDbContext\Servizi.cs" />
@@ -253,6 +261,7 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\myScripts\dropdown.js" />
     <Content Include="Scripts\myScripts\modal.js" />
+    <Content Include="Scripts\myScripts\preferiti.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -274,6 +283,9 @@
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Utente\DatiPersonali.cshtml" />
     <Content Include="Views\Prenota\Storico.cshtml" />
+    <Content Include="Views\Preferiti\Preferiti.cshtml" />
+    <Content Include="Views\Recensione\Recensione.cshtml" />
+    <Content Include="Views\Recensione\Recensioni.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -353,6 +365,9 @@
     <EmbeddedResource Include="Migrations\202310310941198_initialCreate.resx">
       <DependentUpon>202310310941198_initialCreate.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202311081231442_firstMigration.resx">
+      <DependentUpon>202311081231442_firstMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
