--- a/Booking/packages.config
+++ b/Booking/packages.config
@@ -4,7 +4,6 @@
   <package id="bootstrap" version="5.2.3" targetFramework="net481" />
   <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net481" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net481" />
-  <package id="EntityFramework.it" version="6.2.0" targetFramework="net481" />
   <package id="jQuery" version="3.4.1" targetFramework="net481" />
   <package id="MailKit" version="4.2.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net481" />
@@ -39,6 +38,8 @@
   <package id="MimeKit" version="4.2.0" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net481" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net481" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net481" />
   <package id="PayPal" version="1.9.1" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net481" />
