--- a/Booking/Web.config
+++ b/Booking/Web.config
@@ -13,6 +13,12 @@
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		<!-- Paypal -->
+		<add key="clientId" value="" />
+		<add key="clientSecret" value="" />
+		<!-- Mail -->
+		<add key="SmtpSenderEmail" value="" />
+		<add key="SmtpSenderPassword" value="" />
 	</appSettings>
 	<system.web>
 		<authentication mode="Forms">
